--- a/server configurations/server.config
+++ b/server configurations/server.config
@@ -1,12 +1,12 @@
 # Server Configuration File
 
 # Network Settings
-PORT = 8080
-MAX_CONNECTIONS=600
+PORT=8080
+MAX_CONNECTIONS=1000
 TIMEOUT = 30
 
 # Security Settings
-SSL_ENABLED = true
+SSL_ENABLED=FALSE
 SSL_CERT = /path/to/certificate.pem
 
 # Logging Settings
